# test_task_3

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: docker-build.yaml
cli/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/src/: CMakeLists.txt
lib/src/detector/: CMakeLists.txt  caffe_detector.cpp  caffe_detector.hpp  detector.hpp  detector_factory.cpp  detector_factory.hpp  error.cpp  error.hpp  haar_detector.cpp  haar_detector.hpp
lib/src/detector/resources/: caffe_detector_description.json  haar_detector_description.json
lib/src/processor/: CMakeLists.txt  processor.cpp  processor.hpp
lib/src/processor_wrapper/: CMakeLists.txt  processor_wrapper.cpp
lib/src/processor_wrapper/include/: processor.h
lib/tests/: CMakeLists.txt
lib/tests/detector/: caffe_detector.cpp  haar_detector.cpp
lib/tests/processor/: processor.cpp
python_cli/: main.py
recources/: CMakeLists.txt
src/: CMakeLists.txt
src/cpp_cli/: CMakeLists.txt  main.cpp
src/detection/: CMakeLists.txt  config.hpp  detector.cpp  detector.hpp  utils.cpp  utils.hpp
src/detector/: CMakeLists.txt  detector.hpp  detector_factory.cpp  detector_factory.hpp  haar_detector.cpp  haar_detector.hpp
src/processor/: CMakeLists.txt  detector.cpp  detector.hpp  image_queue.cpp  processor_impl.cpp  processor_impl.hpp
src/processor/include/: processor.h
src/processor_wrapper/: CMakeLists.txt  processor_wrapper.cpp  processor_wrapper.hpp
src/processor_wrapper/include/: processor.h
src/runner/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
tests/detector/: detector.cpp
